--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,25 @@ header {
     text-align: center;
 
 }
+
+.question-container-hide{
+    visibility:hidden;
+}
+
+.start-show button{
+    width: 100%;
+    margin: 100px auto 0;
+    border-radius: 10px;
+    padding: 30px 30px;
+    border: black solid;
+    font-size: 50px;
+    background-color: rgb(0, 183, 255);
+}
+
+.start-hide button{
+    visibility:hidden;
+}
+
 .container {
     background: #fff;
     width: 90%;
@@ -21,15 +40,16 @@ header {
     border: black solid;
 }
 
-#question-container {
+.question-container-show {
     font-size: medium;
-    color: bisque;
+    color: black;
     font-weight: 600;
     border-bottom: 1px solid #333;
     padding-bottom: 30px;
-    background-color: rgb(56, 88, 88);
+    background-color: rgb(0, 183, 255);
     border-radius: 10px;
     border: black solid;
     margin:auto;
+    visibility: visible;
 }
 
