--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,12 +19,12 @@ header {
 }
 
 .hide{
-    visibility:hidden;
+    display:none;
 }
 
 .start-show button{
     width: 100%;
-    margin: 100px auto 0;
+    margin: 20px auto 0;
     border-radius: 10px;
     padding: 30px 30px;
     border: black solid;
@@ -48,14 +48,19 @@ header {
 .question-container-show {
     font-size: medium;
     color: black;
-    font-weight: 600;
     border-bottom: 1px solid #333;
-    padding-bottom: 30px;
+    padding: 30px;
     background-color: rgb(0, 183, 255);
     border-radius: 10px;
     border: black solid;
-    margin:auto;
+    margin:20px 20px;
     visibility: visible;
+    text-align: left;
+    display: grid;
+}
+
+.question-container-show div {
+    margin: 10px;
 }
 
 /* When using `max-width` as the breakpoint, you must go from widest to narrowest to avoid conflict */
